--- a/config-data/spring-registry-service.yml
+++ b/config-data/spring-registry-service.yml
@@ -3,7 +3,7 @@ server:
   
 eureka:
   instance:
-    hostname: localhost
+    hostname: ${host.name}
   client:
     registerWithEureka: false
     fetchRegistry: false
