--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -7,7 +7,12 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/customer
-      
+
+kafka:
+  server:
+    hostname: localhost
+    port: 9092
+
 topic:
   groupid: customer-consumer
   purchase:
