--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -13,6 +13,11 @@ kafka:
     hostname: localhost
     port: 9092
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8099/eureka/
+
 topic:
   groupid: customer-consumer
   purchase:
