--- a/config-data/spring-gateway-server.yml
+++ b/config-data/spring-gateway-server.yml
@@ -14,7 +14,7 @@ spring:
           enabled: true
       routes:
       - id: customer-service
-        uri: http://localhost:8090/
+        uri: lb://micro-customer
         predicates:
         - Path=/customer/**
 #      - id: product-service
