--- a/config-data/spring-gateway-server.yml
+++ b/config-data/spring-gateway-server.yml
@@ -17,10 +17,10 @@ spring:
         uri: lb://micro-customer
         predicates:
         - Path=/customer/**
-#      - id: product-service
-#        uri: http://localhost:8091/
-#        predicates:
-#        - Path=/product/**
+      - id: product-service
+        uri: http://localhost:8091/
+        predicates:
+        - Path=/product/**
 #      - id: purchase-service
 #        uri: http://localhost:8092/
 #        predicates:
