--- a/config-data/micro-credit-payment.yml
+++ b/config-data/micro-credit-payment.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8090
+  port: 8098
   
 spring:
   application:
-    name: micro-customer
+    name: micro-credit-payment
   data:
     mongodb:
-      uri: mongodb://localhost:27017/customer
-
+      uri: mongodb://localhost:27017/payment
+      
 kafka:
   server:
     hostname: localhost
@@ -17,4 +17,3 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8099/eureka/
-
