--- a/config-data/micro-transaction.yml
+++ b/config-data/micro-transaction.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8090
+  port: 8093
   
 spring:
   application:
-    name: micro-customer
+    name: micro-transaction
   data:
     mongodb:
-      uri: mongodb://localhost:27017/customer
+      uri: mongodb://localhost:27017/transaction
 
 kafka:
   server:
@@ -17,4 +17,3 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8099/eureka/
-
