--- a/config-data/micro-credit-payment.yml
+++ b/config-data/micro-credit-payment.yml
@@ -7,6 +7,8 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:12500/payment
+  kafka:
+    bootstrap-servers: localhost:29092
       
 kafka:
   server:
