--- a/config-data/micro-withdrawal.yml
+++ b/config-data/micro-withdrawal.yml
@@ -7,6 +7,8 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/withdrawal
+  kafka:
+    bootstrap-servers: localhost:29092
 
 kafka:
   server:
