--- a/config-data/spring-registry-server.yml
+++ b/config-data/spring-registry-server.yml
@@ -3,9 +3,10 @@ server:
   
 eureka:
   instance:
+    preferIpAddress: true
     hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
