--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -20,4 +20,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8099/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
 
