--- a/config-data/spring-registry-server.yml
+++ b/config-data/spring-registry-server.yml
@@ -3,10 +3,9 @@ server:
   
 eureka:
   instance:
-    preferIpAddress: true
     hostname: localhost
   client:
-    registerWithEureka: true
-    fetchRegistry: true
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
