--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -19,7 +19,7 @@ kafka:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8099/eureka/
+      defaultZone: http://${eureka.instance.hostname}:8099/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
