--- a/config-data/spring-gateway-server.yml
+++ b/config-data/spring-gateway-server.yml
@@ -2,9 +2,11 @@ server:
   port: 8080
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://localhost:8099/eureka/
+      defaultZone: http://${eureka.instance.hostname}:8099/eureka/
 
 spring:
   cloud:
