--- a/config-data/micro-credit-payment.yml
+++ b/config-data/micro-credit-payment.yml
@@ -18,4 +18,9 @@ kafka:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8099/eureka/
+      defaultZone: http://${eureka.instance.hostname}:8099/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
