--- a/config-data/spring-gateway-server.yml
+++ b/config-data/spring-gateway-server.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: 192.168.16.113
   client:
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:8099/eureka/
