--- a/config-data/spring-registry-server.yml
+++ b/config-data/spring-registry-server.yml
@@ -1,11 +1,18 @@
 server:
-  port: 8099
-  
+  port: 80
+management:
+  server:
+    port: ${server.port}
 eureka:
   instance:
-    hostname: localhost
+    hostname: marcab-spring-registry-server.azurewebsites.net
+    secure-port-enabled: true
+    nonSecurePort: 80
+    securePort: 443
+    instanceId: ${eureka.instance.hostname}:${spring.application.name}:443
+    statusPageUrl: https://${eureka.hostname}:443/actuator/info
+    healthCheckUrl: https://${eureka.hostname}:443/actuator/health
+    secureHealthCheckUrl: https://${eureka.hostname}:443/actuator/health
   client:
-    registerWithEureka: false
-    fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
