--- a/config-data/spring-registry-server.yml
+++ b/config-data/spring-registry-server.yml
@@ -5,7 +5,7 @@ management:
     port: ${server.port}
 eureka:
   instance:
-    hostname: servidor-eureka.westus.azurecontainer.io
+    hostname: servidor-eureka.azurewebsites.net
     secure-port-enabled: true
     nonSecurePort: 80
     securePort: 443
