--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -24,5 +24,5 @@ eureka:
     fetch-registry: true
   instance:
     prefer-ip-address: true
-    hostname: servidor-eureka.westus.azurecontainer.io
+    hostname: servidor-eureka.azurewebsites.net
 
