--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -16,10 +16,10 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:80/eureka/
+      defaultZone: https://servidor-eureka.azurewebsites.net/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
-    prefer-ip-address: true
-    hostname: servidor-eureka.azurewebsites.net
+    prefer-ip-address: false
+    hostname: micro-customer.azurewebsites.net
 
