--- a/config-data/spring-gateway-server.yml
+++ b/config-data/spring-gateway-server.yml
@@ -2,11 +2,15 @@ server:
   port: 80
 
 eureka:
-  instance:
-    hostname: servidor-eureka.azurewebsites.net
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:80/eureka/
+      defaultZone: https://servidor-eureka.azurewebsites.net/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: false
+    hostname: servidor-gateway.azurewebsites.net
+
 
 spring:
   cloud:
@@ -16,8 +20,8 @@ spring:
           enabled: true
       routes:
       - id: customer-service
-        uri: https://micro-customer.azurewebsites.net/customer
-#        uri: lb://micro-customer
+#        uri: https://micro-customer.azurewebsites.net/customer
+        uri: lb://micro-customer
         predicates:
         - Path=/customer/**
       - id: product-service
