--- a/config-data/spring-registry-server.yml
+++ b/config-data/spring-registry-server.yml
@@ -4,6 +4,8 @@ management:
   server:
     port: ${server.port}
 eureka:
+  server:
+    enableSelfPreservation: false
   instance:
     hostname: servidor-eureka.azurewebsites.net
     secure-port-enabled: true
