update eureka client configs

--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -17,8 +17,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: https://servidor-eureka.azurewebsites.net/eureka/
-#    register-with-eureka: true
-#    fetch-registry: true
+    register-with-eureka: true
+    fetch-registry: true
   instance:
     instance-id: micro-customer
     prefer-ip-address: false
