--- a/config-data/micro-customer.yml
+++ b/config-data/micro-customer.yml
@@ -21,5 +21,5 @@ eureka:
     fetch-registry: true
   instance:
     prefer-ip-address: false
-    hostname: https://micro-customer.azurewebsites.net
+    hostname: micro-customer.azurewebsites.net
 
